nessie/tenant/ingress.minio.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clio-minio-ingress
  namespace: nessie
#  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 'minio.local.kube'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clio-minio-console
                port:
                  number: 9090
#  tls:
#    - hosts:
#        - minio.local.kube
